# mcproto-python

./: .gitignore  .pre-commit-config.yaml  README.md  README_DEUTSCH.md  TODOS.md  compile_proto.sh  conf.py  example.py  index.rst  pyproject.toml  requirements-dev.txt
docs/: conf.py  index.rst  my_extension.py  post_processing.py
mcpb/: __init__.py  _base.py  _util.py  entity.py  events.py  exception.py  language.py  minecraft.py  player.py  text.py  vec3.py  world.py
mcpb/tools/: mcturtle.py
mcproto/: __init__.py  _base.py  _types.py  _util.py  colors.py  constants.py  entity.py  events.py  exception.py  minecraft.py  player.py  text.py  vec3.py  world.py
mcproto/tools/: __init__.py  chatcmd.py  mcturtle.py  text.py
tests/: test_module_imports.py  test_util.py  test_util_cache.py  test_util_rwlock.py  test_vec3.py
tests/tools/: test_mcturtle.py
